--- a/server/appsettings.json
+++ b/server/appsettings.json
@@ -7,7 +7,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost,7423;Database=NTR2019Z;User Id=User2019Z;Password=Password2019Z;"
+    "DefaultConnection": "Server=base.ii.pw.edu.pl,1433;;Database=NTR2019Z;User Id=User2019Z;Password=Password2019Z;"
   },
   "AllowedHosts": "*"
 }
