--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,8 @@
     "formik": "^2.0.6",
     "moment": "^2.24.0",
     "react": "^16.12.0",
+    "bootstrap": "4.0.0",
+    "react-bootstrap": "^1.0.0-beta.16",
     "react-datetime": "^2.16.3",
     "react-dom": "^16.12.0",
     "react-hook-form": "^3.29.2",
